--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>LOGO</h1>
+        <h1>NP</h1>
         <ul>
           <li><a href="#">Work</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </header>
+      <main></main>
     </div>
   </body>
 </html>
