created main sectio

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </header>
-      <main></main>
+      <main>
+        <div class="content-wrapper">
+        <p class="logo">NP</p>
+        <h2>Natalja Popova</h2>
+        <p class="decription">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis natus nulla ipsum inventore perspiciatis deleniti quod quae cumque quia alias laborum ratione quos non provident nisi omnis, sunt vero qui?</p>
+        <button>About me</button>
+        </div>
+      </main>
     </div>
   </body>
 </html>
