--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>NP</h1>
+        <div class="logo-wrapper"><h1>NP</h1><p class="separator-block background-black"></p></div>
+        
         <ul>
           <li><a href="#">Work</a></li>
           <li><a href="#">About</a></li>
@@ -18,10 +19,20 @@
       </header>
       <main>
         <div class="content-wrapper">
-        <p class="logo">NP</p>
+            <section class="banner"> <p class="logo">NP</p>
+                <p class="separator-block background-white"></p>
         <h2>Natalja Popova</h2>
         <p class="decription">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis natus nulla ipsum inventore perspiciatis deleniti quod quae cumque quia alias laborum ratione quos non provident nisi omnis, sunt vero qui?</p>
-        <button>About me</button>
+        <button>About me</button></section>
+       
+        <section class="header-section">
+            <h2>Featured Projects</h2>
+            <p class="separator-block background-coral"></p>
+        </section>
+        <section class="images-section">
+            <img src="./images/25-years.png" alt="">
+            <img src="./images/whatwedo.svg" alt="">
+        </section>
         </div>
       </main>
     </div>
